added steps in jenkins

--- a/OnlineCourses.Repository/JenkinsFile
+++ b/OnlineCourses.Repository/JenkinsFile
@@ -5,13 +5,13 @@
 		stages
 		{
 			stage("Build"){
-				echo "building..." 
-			}
+				steps{echo "building..." 
+			}}
 			stage("Test"){
-			   echo "Testing..." 
-			}
+			  steps{ echo "Testing..." 
+			}}
 			stage("Deploy"){
-			   echo "Deploying..." 
-			}
+			  steps{ echo "Deploying..." 
+			}}
 		}
 	}
